# Developing-Journal

./: .envrc  .gitignore  240712_1-2.txt  AGENTS.md  CLAUDE.md  LICENSE  README.md  SKILLS.md  _quarto.yml  about.qmd  bibliography.bib  flake.nix  headan.html  index-listing.json  index.qmd  main.py  memory.md  pyproject.toml  styles.css
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.direnv/: flake-profile-1-link
.github/workflows/: one-time-pages-deploy.yml  pages-deploy.yml  render-quarto.yml
.obsidian/: community-plugins.json  workspace.json
_includes/: sidebar-toggle.html
_scss/: theme-glass-dark.scss  theme-glass-light.scss
_site/: CNAME  about.html  index.html  listings.json  search.json  styles.css  wrangler.jsonc
_site/assets/: serika-graph.json
_site/style/: dark.scss
_templates/: listing-card.ejs
docs/: about.html  index 2.html  index 3.html  index.html  listings 2.json  listings.json  search 2.json  search.json
posts/: AGENTS.md
posts/UE5 Aura Courses/: Section 02 Project Creation.qmd
posts/at_coder/: cargo_compete.qmd  template.qmd  typical90-01.qmd  typical90-02.qmd  typical90-03.qmd  typical90-04.qmd  typical90-05.qmd  typical90-06.qmd  typical90-07.qmd  typical90-08.qmd  typical90-09.qmd  typical90-10.qmd  typical90-11.qmd
posts/home_server/: linkwarden.qmd
posts/journal/: 2023-10-09.qmd  2023-10-10.qmd  2023-10-12.qmd  2023-10-14.qmd  2023-10-15.qmd  2023-10-16.qmd  2023-10-17.qmd  (+3 more)
scripts/: AUTOSYNC.md  autosync.sh  install-autosync.sh  patch-quarto-visual-editor-mathjax.sh  quarto  stabilize-css-assets.py
(+382 files in other folders)
