[project]
name = "personaljournal"
version = "0.1.0"
description = "Personal journal and Quarto site workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "rdkit>=2026.3.2",
    "scipy>=1.17.1",
    "tiktoken>=0.13.0",
    "transformers>=5.9.0",
]
